--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,7 @@ jobs:
     - name: Install twine
       run: pip install twine
     - name: Publish distribution to Test PyPI
+      if: ${{ secrets.test_pypi_password }}
       env:
         TWINE_REPOSITORY_URL: https://test.pypi.org/legacy/
         TWINE_USERNAME: __token__
@@ -57,7 +58,7 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.test_pypi_password }}
       run: twine upload --non-interactive --skip-existing --verbose 'dist/*whl'
     - name: Publish distribution to PyPI
-      if: startsWith(github.event.ref, 'refs/tags')
+      if: ${{ secrets.pypi_password }} && startsWith(github.event.ref, 'refs/tags'))
       env:
         TWINE_USERNAME: __token__
         TWINE_NON_INTERACTIVE: 1
